gac_sb/objects/AppATPrevisionCA__c.object
<CustomObject>
    <fields>
        <fullName>DatePassageReelle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Si non cochée, la date de passage est présumée</description>
        <inlineHelpText>Si non cochée, la date de passage est présumée</inlineHelpText>
        <label>Date de passage Réelle ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MontantFacturable__c</fullName>
        <label>Montant Facturable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recours__c</fullName>
        <label>Recours</label>
        <referenceTo>AppATrecours__c</referenceTo>
        <relationshipLabel>Prévisions CA</relationshipLabel>
        <relationshipName>PrevisionsCA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Prévision CA</label>
    <nameField>
        <label>Année de la prévision</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prévision CA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>